@@ -5,6 +5,9 @@ LanguageTool Change Log
 -German:
     -added a few rules
 
+-API:
+    -removed classes and methods that had been deprecated since 2.7 or longer
+
 
 2.7 (2014-09-29)
 
